fix second page layout issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -65,12 +65,13 @@
 #second-section {
     #first-part {
         scroll-snap-align: start; 
-        height: 100vh;
+        height: 92vh;
         padding-top: 8vh;
+        margin-bottom: 8vh;
         #logo-intro {
             width: 48vw;
             padding-left: 12px;
-            margin: 1rem 0 2rem 0;
+            margin: 1rem 0 1.5rem 0;
         }
         #images {
             .landscape {
@@ -122,7 +123,7 @@
                 display: none;
             }
             .orange-font {
-                padding: 3rem 1rem 1rem 1rem;
+                padding: 2rem 1rem 1rem 1rem;
                 font-size: 1rem;
                 line-height: 1.65rem;
                 letter-spacing: 0.25px;
@@ -146,7 +147,7 @@
             display: none;
         }
         padding-top: 8vh;
-        height: 94vh;
+        height: 92vh;
         scroll-snap-align: start; 
         a {
             color: white;
@@ -185,7 +186,7 @@
     }
 }
 #footer {
-    height: 6vh;
+    height: 8vh;
     p {
         font-size: .65rem;
         line-height: 1.5;
